# AINovel

./: .gitignore  README.md  frontend_e2e.py
backend/: config.py  conftest.py  database.py  main.py  pyproject.toml  schemas.py  smoke_test.py
backend/db/: __init__.py  ai_creation.py  ai_kg.py  common.py  configs.py  connection.py  enrichment.py  kg.py  novel_kg.py  novels.py  schema.py
backend/novels/: 1_北电门房 作者：娱乐圈老司机.txt  3_超级房东 作者：俗人.txt  4_第2章 胡列娜篇.txt
backend/routers/: __init__.py  creation.py  enrichment.py  image.py  models.py  novels.py  prompts.py  tasks.py
backend/services/: __init__.py  agents.py  ai_service.py  character_service.py  creation_agents.py  creation_intake_service.py  creation_service.py  diff_service.py  enrichment_service.py  enrichment_suggestion_service.py  file_service.py  image_service.py  kg_ranker.py  kg_service.py  metrics_service.py  model_service.py  novel_service.py  prompt_service.py  task_registry.py
backend/services/ai_providers/: __init__.py  anthropic.py  base.py  openai_compatible.py  registry.py
backend/tests/: test_agents.py  test_ai_service.py  test_api.py  test_database_runtime.py  test_kg_unified.py  test_parsers.py  test_single_mode.py  test_task_registry.py
docs/: PRD.md  ai-creation-kg-architecture.md  修改v0.1.md  小说加料方案.md  技术架构文档.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: _check_frontend.js  (+15 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_all.py  generate_source.py
src-tauri/src/: main.rs
(+79 files in other folders)
