[project]
name = "backend"
version = "0.1.0"
description = "FastAPI Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.scripts]
serve = "main:app"