[package]
name = "ai-novel-desktop"
version = "1.0.0"
description = "AI Novel Management Desktop App"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ai_novel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
